@@ -7,6 +7,7 @@ To do:
 
 - 03/01/2005, version 1.80i: roms
 	- implemented new method for grayscale computing & management (idea from Kevin)
+	- clean-up of popup menu (#colors menu removed)
 
 - 13/12/2004, version 1.80h: roms
 	- simplified skin/keymap management (TI92+ => TI92, TI89t => TI89)
